After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785722 - Searching sometimes doesn't show results
Searching sometimes doesn't show results
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Views: All
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-02 09:41 UTC by Alexandru Pandelea
Modified: 2017-08-07 11:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
files-view: fix adding files to the view (2.13 KB, patch)
2017-08-02 09:42 UTC, Alexandru Pandelea
committed Details | Review

Description Alexandru Pandelea 2017-08-02 09:41:24 UTC
See patch.
Comment 1 Alexandru Pandelea 2017-08-02 09:42:25 UTC
Created attachment 356768 [details] [review]
files-view: fix adding files to the view

Searching makes Nautilus have no files in the view sometimes, even
if there are search results, because the view connects to the
files-added signal after it added a monitor to the directory
and the signal might be emitted before connecting to it.

To fix this, first connect to the files-added and files-changed
signals, before adding the monitor to the directory.
Comment 2 Carlos Soriano 2017-08-07 08:58:16 UTC
Review of attachment 356768 [details] [review]:

LGTM thanks!
Comment 3 Carlos Soriano 2017-08-07 08:58:18 UTC
Review of attachment 356768 [details] [review]:

LGTM thanks!
Comment 4 Alexandru Pandelea 2017-08-07 11:03:25 UTC
Attachment 356768 [details] pushed as 884a296 - files-view: fix adding files to the view