files-view: fix adding files to the view

Searching makes Nautilus have no files in the view sometimes, even
if there are search results, because the view connects to the
files-added signal after it added a monitor to the directory
and the signal might be emitted before connecting to it.

To fix this, first connect to the files-added and files-changed
signals, before adding the monitor to the directory.

https://bugzilla.gnome.org/show_bug.cgi?id=785722